--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
           <p>Privacy</p>
         </div>
         <div class="root4">
-          <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+          <a href="#"
+            ><i class="fa-brands fa-facebook-f" style="color: #f0f2f5"></i
+          ></a>
           <a href="#"><i class="fa-brands fa-twitter"></i></a>
           <a href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
